force-app/main/default/objects/FleetManagementConfig__c/FleetManagementConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>custom config for Fleet Management app</description>
    <label>Fleet Management Config</label>
</CustomObject>