force-app/main/default/objects/FleetManagementConfig__c/fields/DefaultBatchId__c.field-meta.xml
<CustomField>
    <fullName>DefaultBatchId__c</fullName>
    <description>default batch that is used for example for vehicles created from AutoDesktop and not the normal flow</description>
    <inlineHelpText>default batch that is used for example for vehicles created from AutoDesktop and not the normal flow</inlineHelpText>
    <label>Default Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>