force-app/main/default/objects/FleetManagementConfig__c/fields/DefaultOppAccountId__c.field-meta.xml
<CustomField>
    <fullName>DefaultOppAccountId__c</fullName>
    <description>Id of account that will be used as default for opportunities created from Vehicle Batch</description>
    <inlineHelpText>Id of account that will be used as default for opportunities created from Vehicle Batch</inlineHelpText>
    <label>Default Opp Account Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>