force-app/main/default/objects/FleetManagementConfig__c/fields/ExchangeVehicleGroupId__c.field-meta.xml
<CustomField>
    <fullName>ExchangeVehicleGroupId__c</fullName>
    <description>Id of the Vehicle Group that shall be used for Exchange vehicles as default</description>
    <inlineHelpText>Id of the Vehicle Group that shall be used for Exchange vehicles as default</inlineHelpText>
    <label>Exchange Vehicle Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>