force-app/main/default/objects/FleetManagementConfig__c/fields/Opportunity_default_user__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_default_user__c</fullName>
    <label>Opportunity default user</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>