force-app/main/default/objects/FleetManagementConfig__c/fields/Uncategorizied__c.field-meta.xml
<CustomField>
    <fullName>Uncategorizied__c</fullName>
    <description>id of Vehicle Group that is used for forecast summary of vehicles with not defined vehicle group yet</description>
    <inlineHelpText>id of Vehicle Group that is used for forecast summary of vehicles with not defined vehicle group yet</inlineHelpText>
    <label>Uncategorized Vehicle Group Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>