force-app/main/default/objects/FleetManagementConfig__c/fields/VAT_Percentage__c.field-meta.xml
<CustomField>
    <fullName>VAT_Percentage__c</fullName>
    <defaultValue>20</defaultValue>
    <description>what is current VAT on vehicles and accessories
used to calculate values with/without VAT especially when sending to Navision</description>
    <inlineHelpText>what is current VAT on vehicles and accessories</inlineHelpText>
    <label>VAT Percentage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>